Version 2012053102 Thu May 31 22:15:58 CEST 2012
+ Add author tests
+ New theme: jelly_belly

Version 2012053101 Thu May 31 13:29:07 CEST 2012
+ Theme: nehi

Version 2012053001 Wed May 30 23:23:06 CEST 2012
+ Theme: evangelist

Version 2012052202 Tue May 22 23:56:41 CEST 2012
+ Theme: compass

Version 2012052201 Tue May 22 00:20:51 CEST 2012
+ List prereq 'Acme::MetaSyntactic::MultiList'

Version 2012052102 Mon May 21 23:55:12 CEST 2012
+ Theme: bee_gees

Version 2012052101 Mon May 21 01:29:06 CEST 2012
+ List requirements in Makefile.PL
+ Theme: charlies_angels

Version 2012051701 Thu May 17 23:34:39 CEST 2012
+ First release
+ Themes: beatles, michelin, sodor.