@@ -1,3 +1,6 @@
+Version 2012060101 Fri Jun  1 02:34:11 CEST 2012
++ New theme: cluedo
+
 Version 2012053102 Thu May 31 22:15:58 CEST 2012
 + Add author tests
 + New theme: jelly_belly
